--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </a>
     <a href="https://tvpass.org" class="button" onclick="launchApp(event, 'https://tvpass.org')">
       <img src="https://cdn1.iconfinder.com/data/icons/streaming-services-2/256/TV_Schedule-512.png" alt="TV Icon" />
-      TV
+      Live TV
     </a>
   </div>
 
