--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tesla Theater</title>
   <link rel="icon" href="https://www.svgrepo.com/show/331599/tesla.svg" type="image/svg+xml" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --bg-light: #fff;
+      --bg-light: #f5f5f5;
       --bg-dark: #000;
       --text-light: #222;
       --text-dark: #eee;
+      --blur-bg: rgba(255, 255, 255, 0.1);
     }
 
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', 'Roboto', sans-serif;
+      font-family: 'Roboto', sans-serif;
       background-color: var(--bg-light);
       color: var(--text-light);
       transition: background-color 0.3s ease, color 0.3s ease;
@@ -33,11 +35,21 @@
       width: 64px;
       margin: 2rem auto 1rem;
       display: block;
+      opacity: 0;
+      transform: translateY(-20px);
+      animation: slideIn 1s ease forwards;
+    }
+
+    @keyframes slideIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     header {
       font-size: 3rem;
-      font-weight: 500;
+      font-weight: 100;
       text-align: center;
       margin-bottom: 2rem;
     }
@@ -52,8 +64,9 @@
     }
 
     .button {
-      background-color: #f8f8f8;
-      border: 2px solid #e0e0e0;
+      background: var(--blur-bg);
+      backdrop-filter: blur(12px);
+      border: 2px solid #ccc;
       border-radius: 12px;
       padding: 1.2rem;
       font-size: 1rem;
@@ -64,10 +77,33 @@
       align-items: center;
       justify-content: center;
       color: inherit;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .button::after {
+      content: "";
+      position: absolute;
+      border-radius: 50%;
+      transform: scale(0);
+      background: rgba(255, 255, 255, 0.3);
+      animation: ripple 0.6s linear;
+    }
+
+    .button:active::after {
+      transform: scale(4);
+      opacity: 0;
+    }
+
+    @keyframes ripple {
+      to {
+        transform: scale(4);
+        opacity: 0;
+      }
     }
 
     body.dark .button {
-      background-color: #111;
+      background-color: rgba(255, 255, 255, 0.05);
       border-color: #444;
     }
 
@@ -98,15 +134,15 @@
 
     .spinner {
       width: 80px;
-      height: 80px;
-      border: 8px solid rgba(255, 0, 0, 0.2);
-      border-top: 8px solid #e82127;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
+      height: 40px;
+      border-radius: 20px;
+      background: linear-gradient(90deg, #e82127 0%, #000 100%);
+      animation: pulse 1s infinite ease-in-out;
     }
 
-    @keyframes spin {
-      to { transform: rotate(360deg); }
+    @keyframes pulse {
+      0%, 100% { transform: scaleX(1); }
+      50% { transform: scaleX(1.2); }
     }
 
     footer {
@@ -129,9 +165,29 @@
     details p {
       margin: 0.5rem 0 0;
     }
+
+    .clock-widget {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      text-align: right;
+      font-size: 1rem;
+      font-weight: 400;
+      color: #666;
+      z-index: 100;
+    }
+
+    body.dark .clock-widget {
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
+  <div class="clock-widget">
+    <div id="clock"></div>
+    <div id="date"></div>
+  </div>
+
   <img src="https://logo.clearbit.com/tesla.com" alt="Tesla Logo" class="logo" />
   <header>Tesla Theater</header>
 
@@ -188,6 +244,14 @@
       const loader = document.getElementById("loader");
       if (loader) loader.style.display = "none";
     });
+
+    function updateClock() {
+      const now = new Date();
+      document.getElementById("clock").textContent = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+      document.getElementById("date").textContent = now.toLocaleDateString([], { weekday: 'short', month: 'short', day: 'numeric' });
+    }
+    setInterval(updateClock, 1000);
+    updateClock();
   </script>
 </body>
 </html>
