--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 2rem;
-      max-width: 800px;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 1.5rem;
+      max-width: 100%;
       margin: 0 auto;
-      padding: 0 2rem;
+      padding: 0 1rem;
     }
 
     .button {
@@ -79,11 +79,25 @@
       color: inherit;
       position: relative;
       overflow: hidden;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: slideUp 0.6s ease forwards;
+    }
+
+    .button:nth-child(1) { animation-delay: 0.2s; }
+    .button:nth-child(2) { animation-delay: 0.4s; }
+    .button:nth-child(3) { animation-delay: 0.6s; }
+
+    @keyframes slideUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .button img {
-      width: 48px;
-      height: 48px;
+      width: 40px;
+      height: 40px;
       margin-bottom: 0.5rem;
     }
 
@@ -153,6 +167,20 @@
 
     body.dark .clock-widget {
       color: #ccc;
+    }
+
+    @media screen and (max-width: 480px) {
+      header {
+        font-size: 2rem;
+      }
+      .button {
+        font-size: 0.9rem;
+        padding: 1rem;
+      }
+      .button img {
+        width: 32px;
+        height: 32px;
+      }
     }
   </style>
 </head>
@@ -226,10 +254,4 @@
     function updateClock() {
       const now = new Date();
       document.getElementById("clock").textContent = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-      document.getElementById("date").textContent = now.toLocaleDateString([], { weekday: 'short', month: 'short', day: 'numeric' });
-    }
-    setInterval(updateClock, 1000);
-    updateClock();
-  </script>
-</body>
-</html>
+      document.getElement
