--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
       Live TV
     </a>
     <a href="https://retrogames.cc" class="button" onclick="launchApp(event, 'https://www.youtube.com/playables')">
-      <img src="https://cdn-icons-png.flaticon.com/512/1036/1036573.png" alt="Arcade Icon" />
-      Arcade
+      <img src="https://cdn-icons-png.flaticon.com/512/5930/5930147.png" alt="Games Icon" />
+      Games
     </a>
   </div>
 
