--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <img src="https://cdn1.iconfinder.com/data/icons/streaming-services-2/256/TV_Schedule-512.png" alt="TV Icon" />
       Live TV
     </a>
-    <a href="https://retrogames.cc" class="button" onclick="launchApp(event, 'https://www.youtube.com/playables')">
+    <a href="https://youtube.com/playables" class="button" onclick="launchApp(event, 'https://www.youtube.com/playables')">
       <img src="https://cdn-icons-png.flaticon.com/512/5930/5930147.png" alt="Games Icon" />
       Games
     </a>
