--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <header>Tesla Theater</header>
 
   <div class="grid">
-    <a href="https://cineby.app" class="button" onclick="launchApp(event, 'https://cineby.app')">
+    <a href="https://bitcine.app" class="button" onclick="launchApp(event, 'https://bitcine.app')">
       <img src="https://cdn-icons-png.flaticon.com/512/3418/3418886.png" alt="Movies Icon" />
       Movies
     </a>
