--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <img src="https://cdn1.iconfinder.com/data/icons/streaming-services-2/256/TV_Schedule-512.png" alt="TV Icon" />
       Live TV
     </a>
-    <a href="https://streamed.su" class="button" onclick="launchApp(event, 'https://streamed.su')">
+    <a href="https://thetvapp.to" class="button" onclick="launchApp(event, 'https://thetvapp.to')">
       <img src="https://cdn-icons-png.flaticon.com/512/8853/8853766.png" alt="Sports Icon" />
       Live Sports
     </a>
